# fitx-workloads

./: Cargo.toml  Dockerfile  README.md  TODO.txt  cities.csv  database.sql  docker-compose.yml  docker-up.sh  init.sql  locations.csv
src/: main.rs
