[package]
name = "fitx-workload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = {version = "0.7.7", features = ["with-chrono-0_4"] }
chrono = "0.4.22"
futures = "0.3.24"

[profile.release]
strip = true
lto = true
